--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/login", "dest": "/api/login.js" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
